# TudoAqui-App

./: .gitignore  CODE_REVIEW_REPORT.md  README-DEPLOY.md  README.md  docker-compose.yml
backend/: .env  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  server.py
backend/alembic/: env.py
backend/alembic/versions/: 34603b9406f9_initial_schema.py  9c5bdd6b2153_sync_all_models.py
backend/src/: config.py  database.py  main.py  seed.py
backend/src/account/: router.py
backend/src/admin/: router.py
backend/src/alojamento/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/auth/: __init__.py  dependencies.py  rate_limiter.py  router.py  service.py
backend/src/common/: sms_provider.py  websocket.py  ws_router.py
backend/src/events/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/marketplace/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/notifications/: models.py  router.py  service.py
backend/src/partners/: __init__.py  models.py  router.py
backend/src/payments/: models.py  router.py  schemas.py  service.py
backend/src/realestate/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/tuendi/: schemas.py
backend/src/turismo/: __init__.py  (+4 more)
backend/tests/: conftest.py  test_account_upgrades.py  test_admin_panel.py  test_all_modules.py  test_gps_tracking_rides.py  test_isolated.py  test_iteration9_endpoints.py  test_modules.py  test_partners.py  test_payments.py  test_role_tipo_migration.py  test_tudoaqui_api.py  test_tudoaqui_seed_data.py
(+150 files in other folders)
